Subido el template de signin.html

--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -8,7 +8,7 @@
                 <form action="" method="">
                     <input type="text" placeholder="username" required>
                     <input type="password" placeholder="password">
-                    <button type="submit" class="btn btn-default">Send</button>
+                    <button class="btn btn-info btn-block login" type="submit">Login</button>
                     <hr/>
                     <span>Don't have an account? <a href="#">Create one now</a></span>
                 </form>
