LOGIN IMPLEMENTADO, REGISTRO EN PROGRESO -Login implementado -Registro en progreso

--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -54,5 +54,6 @@
         <script src="{% static "js/sweet-alert.js" %}"></script>
         <script src="{% static "js/custom.js" %}"></script>
         <script src="{% static "js/countUp.min.js" %}"></script>
+        <script src="{% static "js/main.js" %}"></script>
     </body>
 </html>
