--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -4,6 +4,10 @@ body {
     background-color: #EEEEEE;
 }
 
+.label {
+	color: #000;
+}
+
 .navbar-bt {
     background-color: #EEEEEE;
     border-color: #EEEEEE;
