--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -2,18 +2,66 @@
 {% block title %} Sign in {% endblock %}
 {% block content %}
 <div class="row">
+	{%if message%}
+		<p>{{message}}</p>
+	{%endif%}
     <div class="col-lg-12">
         <div class="login-container">
             <div class="form-box-login">
-                <form action="" method="">
-                    <input type="text" placeholder="username" required>
-                    <input type="password" placeholder="password">
-                    <button type="submit" class="btn btn-default">Send</button>
+                <form action="/signin/" method="post">
+                	{% csrf_token %}
+                    <input type="text" placeholder="username" name="username" required>
+                    <input type="password" placeholder="password" name="password">
+                    <button class="btn btn-info btn-block login" type="submit">Login</button>
                     <hr/>
-                    <span>Don't have an account? <a href="#">Create one now</a></span>
+                    <span>Don't have an account? <a href="#" data-toggle="modal" data-target="#registerModal">Create one now</a></span>
                 </form>
             </div>
+            
+            <div>
+            	<li></li>
+            	{%for error in form.error%}
+            		<li>{{error}}</li>
+            	{%endfor%}
+            </div>
         </div>
+    </div>
+    
+    
+    
+    <div class="modal fade registrationForm" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	    <div class="modal-dialog">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <h4 class="modal-title" id="myModalLabel">Registration</h4>
+		      </div>
+		      <div class="modal-body">
+				<form action="/register_traveller/" id="traveller-registration">
+					<div class="form-group">
+					    <label for="first_name">First name: </label>
+					    <input type="text" class="form-control" id="first_name">
+				  	</div>
+				  	<div class="form-group">
+					    <label for="last_name">Last name: </label>
+					    <input type="text" class="form-control" id="last_name">
+				  	</div>
+				  	<div class="form-group">
+					    <label for="email">First name: </label>
+					    <input type="email" class="form-control" id="email">
+				  	</div>
+				  	<div class="form-group">
+					    <label for="password1">Password: </label>
+					    <input type="password" class="form-control" id="password1">
+				  	</div>
+				  	<div class="form-group">
+					    <label for="password2">Repeat password: </label>
+					    <input type="password" class="form-control" id="password2">
+				  	</div>
+					<button class="btn btn-info btn-block login" type="submit">Login</button>
+				</form>
+			 </div>
+		</div>	
     </div>
 </div>
 {%endblock%}
