Registro de Usuario con ventana modal y Ajax implementado.

--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -55,5 +55,6 @@
         <script src="{% static "js/custom.js" %}"></script>
         <script src="{% static "js/countUp.min.js" %}"></script>
         <script src="{% static "js/main.js" %}"></script>
+        <script>{% static "/static/dajax/jquery.dajax.core.js" %}</script>
     </body>
 </html>
