--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -27,8 +27,6 @@
         </div>
     </div>
     
-    
-    
     <div class="modal fade registrationForm" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	    <div class="modal-dialog">
 		    <div class="modal-content">
@@ -38,30 +36,12 @@
 		      </div>
 		      <div class="modal-body">
 				<form action="/register_traveller/" id="traveller-registration">
-					<div class="form-group">
-					    <label for="first_name">First name: </label>
-					    <input type="text" class="form-control" id="first_name">
-				  	</div>
-				  	<div class="form-group">
-					    <label for="last_name">Last name: </label>
-					    <input type="text" class="form-control" id="last_name">
-				  	</div>
-				  	<div class="form-group">
-					    <label for="email">First name: </label>
-					    <input type="email" class="form-control" id="email">
-				  	</div>
-				  	<div class="form-group">
-					    <label for="password1">Password: </label>
-					    <input type="password" class="form-control" id="password1">
-				  	</div>
-				  	<div class="form-group">
-					    <label for="password2">Repeat password: </label>
-					    <input type="password" class="form-control" id="password2">
-				  	</div>
+					{{ registerForm.as_ul }}
 					<button class="btn btn-info btn-block login" type="submit">Login</button>
 				</form>
 			 </div>
 		</div>	
-    </div>
+    </div> 
+    
 </div>
 {%endblock%}
