--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %} Sign in {% endblock %}
 {% block content %}
-<div class="row">
+<div class="row animated fadeInUp">
 	{%if message%}
 		<p>{{message}}</p>
 	{%endif%}
