Registro de traveller con envio de correo implementado.

--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -48,7 +48,7 @@
 				    </div>
 				  </div>
 				    <div class="col-sm-offset-2 col-sm-10">
-				      <button type="submit" class="btn btn-default btn-lg btn-block">Sign up</button>
+				      <button type="submit" class="btn btn-default btn-lg btn-block" id="singUp-button">Sign up</button>
 				    </div>
 				  </div>
 				  <div class="form-group">
