--- a/principal/templates/public_trip_details.html
+++ b/principal/templates/public_trip_details.html
@@ -11,9 +11,9 @@
             <strong><a href="user.html">{{trip.traveller}}</a></strong>
             <br>
           </div>
-          <div class="media-body"">
+          <div class="media-body">
             <i class="fa fa-quote-left fa-3x pull-left"></i>
-            <p>{{trip.publishedDescription}}</p>
+            <p>{{trip.publishedDescription|safe}}</p>
           </div>
         </div>
         <div class="timeline-centered">
@@ -42,10 +42,10 @@
                     <img class="img-circle" style="width: 40px; height: 40px;" src="/static/user_folder/{{ comment.traveller.photo }}">
                 </div>
                 <div class="timeline-label">
-                    <h2><a href="#">{{comment.traveller}} says:</a>
+                    <h2><a href="#">{{comment.traveller}} says:</a></h2>
                     <br>
                     <i class="fa fa-quote-left fa-1x pull-left"></i>
-                    <p style="font-style: italic;">{{comment.description}}</p>
+                    <p style="font-style: italic;">{{comment.description|safe}}</p>
                 </div>
             </div>
         </article>
