Mejorada la vista de detalles de un viaje

--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>BrainTravel</title>
-        <media charset='utf-8'/></media>
+        <meta charset="ISO-8859-1">
         <!-- Latest compiled and minified CSS -->
         {%load staticfiles%}
         <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
