--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -2,7 +2,17 @@
 {% block title %} Sign in {% endblock %}
 {% block content %}
 <div class="row animated fadeInUp">
-	{%if message%}
+{% if msg_errors %}
+	<div class="alert alert-danger" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        {% for msg_error in msg_errors %}
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <span class="sr-only">Error:</span>
+            {{ msg_error }}
+        {% endfor %}
+{% endif %}
+    </div>
+    {%if message%}
 		<p>{{message}}</p>
 	{%endif%}
     <div class="col-lg-12">
@@ -35,6 +45,7 @@
 		      </div>
 		      <div class="modal-body">
 				<form class="form-horizontal" action="/register_traveller/" id="traveller-registration" method="post">
+                {% csrf_token %}
 				<div class="form-group">
 				    <label for="name" class="col-sm-2 control-label">Name</label>
 				    <div class="col-sm-10">
