--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -1,67 +1,54 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>BrainTravel</title>
-        <meta charset="ISO-8859-1">
-        <!-- Latest compiled and minified CSS -->
-        {%load staticfiles%}
-        <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
-        <link rel="stylesheet" href="{% static "css/custom.css" %}">
-        <link rel="stylesheet" href="{% static "css/animate.css" %}">
-        <link rel="stylesheet" href="{% static "css/sweet-alert.css" %}">
-        <link rel="stylesheet" href="{% static "css/font-awesome.min.css" %}">
-    </head>
-    <body>
-        <nav class="navbar navbar-default navbar-bt">
-          <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="/">BrainTravel</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="/search"><span class="glyphicon glyphicon-search"></span></a>
-                </li>
-                <li>
-                    <a href="#">Link</a>
-                </li>
-                {% if user.is_anonymous %}
-                    <li style="background-color: #26A65B; color: #FFFFFF;">
-                        <a id="sign_ind_nav" href="/signin">Sign In</a>
-                    </li>
-                {% else %}
-                    <li style="background-color: #26A65B;">
-                        <a id="sign_ind_nav" href="/logout">Logout</a>
-                    </li>
-                {% endif %}
-              </ul>
-            </div><!-- /.navbar-collapse -->
-          </div><!-- /.container-fluid -->
-        </nav>        
+<head>
+<title>BrainTravel</title>
+<meta charset="ISO-8859-1">
+<!-- Latest compiled and minified CSS -->
+{% load staticfiles %}
+<link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
+<link rel="stylesheet" href="{% static "css/custom.css" %}">
+<link rel="stylesheet" href="{% static "css/animate.css" %}">
+<link rel="stylesheet" href="{% static "css/sweet-alert.css" %}">
+<link rel="stylesheet" href="{% static "css/font-awesome.min.css" %}">
+</head>
+<body>
+	<nav class="navbar navbar-default navbar-bt">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed"
+					data-toggle="collapse" data-target="#menu-navbar">
+					<span class="sr-only">Toggle navigation</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="/">BrainTravel</a>
+			</div>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="menu-navbar">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="/search"><span class="fa fa-search"></span></a></li>
+					{% if user.is_anonymous %}
+					<li style="background-color: #26A65B; color: #FFFFFF;"><a
+						id="sign_ind_nav" href="/signin">Sign In</a></li> {% else %}
+					<li style="background-color: #26A65B;"><a id="sign_ind_nav"
+						href="/logout">Logout</a></li> {% endif %}
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
+		</div>
+		<!-- /.container-fluid -->
+	</nav>
 
-        <div class="container">
-            {%block content%}
-            {%endblock%}
-        </div>
-        <!-- Bootstrap -->
-        <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-        
-        <!-- Boostrap from static files -->
-        <script src="{% static "js/bootstrap.min.js" %}"></script>
+	<div class="container">{% block content %} {% endblock %}</div>
 
-        <!-- Dependencies JS -->
-        <script src="{% static "js/sweet-alert.js" %}"></script>
-        <script src="{% static "js/custom.js" %}"></script>
-        <script src="{% static "js/countUp.min.js" %}"></script>
-        <script src="{% static "js/main.js" %}"></script>
-        <script>{% static "/static/dajax/jquery.dajax.core.js" %}</script>
-    </body>
+	<!-- Jquery -->
+	<script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
+	<!-- Boostrap -->
+	<script src="{% static "js/bootstrap.min.js" %}"></script>
+	<!-- Dependencies JS -->
+	<script src="{% static "js/sweet-alert.min.js" %}"></script>
+	<script src="{% static "js/countUp.min.js" %}"></script>
+	<script src="{% static "js/main.js" %}"></script>
+</body>
 </html>
