--- a/principal/templates/search.html
+++ b/principal/templates/search.html
@@ -18,25 +18,32 @@
 {% for trip in trip_result %}
   <div class="well animated fadeInUp">
       <div class="media">
-      	<a class="pull-left" href="#">
-    		<img class="img-rounded" src="/static/user_folder/{{trip.traveller.photo}}">
-  		</a>
-  		<div class="media-body">
-    		<h3 class="media-heading">{{trip.name}}</h3>
-          <p class="text-right">By {{trip.traveller}}</p>
-          <p>{{trip.publishedDescription|safe}}</p>
-          <ul class="list-inline list-unstyled">
-  			    <li><span><i class="fa fa-calendar"></i> {{trip.startDate}} - {{trip.endDate}}</span></li>
-            <li>|</li>
-            <span> {{trip.comment_set.all.count}} <i class="fa fa-comments"></i></span>
-            <li>|</li>
-            <span><i class="fa fa-thumbs-o-up"></i> {{trip.likes}}</span>
-            <li>|</li>
-            <span><i class="fa fa-thumbs-o-down"></i> {{trip.dislikes}}</span>
-            <li>|</li>
-            <a href="/public_trip_details/{{trip.scorable_ptr_id}}"><i class="fa fa-info-circle"></i> View more</a>
-			</ul>
-       </div>
+        <div class="row">
+            <div class="col-md-2 col-sm-3 col-lg-2 col-xs-12 text-center">
+                <a href="#">
+                    <img class="img-rounded" src="/static/user_folder/{{trip.traveller.photo}}">
+                </a>
+            </div>
+            <div class="col-md-10 col-sm-9 col-lg-10 col-xs-12">
+                <div class="media-body">
+                    <h3 class="media-heading text-center">{{trip.name}}</h3>
+                    <p class="text-right">By {{trip.traveller}}</p>
+                    <p>{{trip.publishedDescription|safe}}</p>
+                    <ul class="list-inline list-unstyled">
+			            <li><span><i class="fa fa-calendar"></i> {{trip.startDate}} - {{trip.endDate}}</span></li>
+			        </ul>
+			        <ul class="list-inline list-unstyled">
+			            <li><span> {{trip.comment_set.all.count}} <i class="fa fa-comments"></i></span></li>
+			            <li>|</li>
+			            <li><a href="#"><i class="fa fa-thumbs-o-up"></i> {{trip.likes}}</a></li>
+			            <li>|</li>
+			            <li><a href="#"><i class="fa fa-thumbs-o-down"></i> {{trip.dislikes}}</a></li>
+			            <li>|</li>
+			            <li><a href="/public_trip_details/{{trip.scorable_ptr_id}}"><i class="fa fa-info-circle"></i> View more</a></li>
+			        </ul>
+		       </div>
+            </div>
+        </div>
     </div>
   </div>
   <br>
