--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -3,8 +3,8 @@
     <head>
         <title>BrainTravel</title>
         <meta charset="ISO-8859-1">
-        <!-- Latest compiled and minified CSS -->
         {% load staticfiles %}
+         {% load i18n %}
         <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
         <link rel="stylesheet" href="{% static "css/custom.css" %}">
         <link rel="stylesheet" href="{% static "css/animate.css" %}">
@@ -53,6 +53,21 @@
         </nav>
 
         <div class="container">{% block content %} {% endblock %}</div>
-
+    
+	    {% if messages %}
+	       {% trans "Accept" as confirm_button %}
+	       {% for message in messages %}
+		        <script type="text/javascript">
+			        $(function(){
+			            swal({
+			                title: '{{ message.tags }}',
+			                text: '{{ message }}',
+			                type: '{{ message.tags }}',
+			                confirmButtonText: '{{confirm_button}}'
+			            });
+			        });
+		        </script>
+	        {% endfor %}
+	    {% endif %}
     </body>
 </html>
