Corregido el fallo por el cual no se muestra el datapicker

--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -18,6 +18,7 @@
         <script src="{% static "js/sweet-alert.min.js" %}"></script>
         <script src="{% static "js/countUp.min.js" %}"></script>
         <script src="{% static "js/main.js" %}"></script>
+        {% block extrahead %} {% endblock %}
     </head>
     <body>
         <nav class="navbar navbar-default navbar-bt">
