--- a/principal/templates/trip_edit.html
+++ b/principal/templates/trip_edit.html
@@ -7,9 +7,9 @@
 <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
     {% if create %}
-        <h2>"Create Trip"</h2>
+        <h2>Create Trip</h2>
     {% else %}
-        <h2> "Edit Trip"</h2>
+        <h2> Edit Trip</h2>
     {% endif %}
 
     {% if create %}
@@ -18,11 +18,12 @@
         <form action="/trip_edit/{{ trip.id }}" method="post" role="form">
     {% endif %}
 
+
         {% for field in form.visible_fields %}
 
             <div id="div_{{ field.html_name }}" class="col-xs-6col-md-6 form-group{% if field.errors %} has-error{% endif %}">
-                {{ field.label_tag|safe }}
-                {{ field|safe }}
+                {{ field.label_tag }}
+                {{ field }}
                 <div class="text-muted pull-right">
                     <small>{{ field.help_text }}</small>
                 </div>
