Añadido los borradores al crear un viaje Añadido el link a trip draft Corregido los link

--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -47,13 +47,17 @@
                         </li>
                     {% else %}
                         <li style="text-decoration: None">
-                            <a id="sign_ind_nav" href="/list_my_trips">List my trips</a>
+                            <a id="sign_ind_nav" href="/Trip/list">List my trips</a>
                         </li>
+
                         <li style="text-decoration: None">
-                            <a id="sign_ind_nav" href="/list_history_coin">List history coins</a>
+                            <a id="sign_ind_nav" href="/Trip/draft">List my trips draft</a>
                         </li>
 
+                        <li style="text-decoration: None">
 
+                            <a id="sign_ind_nav" href="/Coin/list">List history coins</a>
+                        </li>
                         <li style="background-color: #26A65B;">
                             <a id="sign_ind_nav" href="/logout">Logout</a>
                         </li>
