--- a/principal/templates/trip_edit.html
+++ b/principal/templates/trip_edit.html
@@ -13,9 +13,9 @@
     {% endif %}
 
     {% if create %}
-        <form action="/trip_create/" method="post">{% csrf_token %}
+        <form action="/Trip/create/" method="post">{% csrf_token %}
     {% else %}
-        <form action="/trip_edit/{{ trip.id }}" method="post" role="form">
+        <form action="/Trip/edit/{{ trip.id }}" method="post" role="form">
     {% endif %}
 
 
@@ -37,7 +37,8 @@
         {% endfor %}
         {% csrf_token %}
         <div class="form-group">
-            <input type="submit" value="Save Trip" class="btn btn-primary"/>
+            <input type="submit" name="save" value="Publish Trip" class="btn btn-primary"/>
+            <input type="submit" name="save" value="Save draft" class="btn btn-primary"/>
         </div>
     </form>
 </div>
