Borramos viajes añadida la visualizacion segura y la internacionalizacion

--- a/principal/templates/trip_list.html
+++ b/principal/templates/trip_list.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% block title %} Trip list {% endblock %}
 {% block content %}
-    {% load i18n %}
 
 {% if msg_errors %}
 <div class="alert alert-danger" role="alert">
@@ -15,8 +14,9 @@
 {% endif %}
 
 {% if not trips %}
-    <p>{% trans "We couldn't find anything..." %}</p>
+    <p>We couldn't find anything...</p>
 {% endif %}
+
 
 {% for trip in trips %}
 <div class="well animated fadeInUp">
